# [[file:spdkit-surface.note::e345323a][e345323a]]
[package]
name = "spdkit-surface"
version = "0.0.1"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "short text for crates.io"
license = "GPL-3.0"
homepage = "https://github.com/spdkit/spdkit"
repository = "https://github.com/spdkit/spdkit"

[dependencies]
gut = { version = "0.4", package = "gchemol-gut" }
gchemol = { version = "0.1", features = ["adhoc"] }

[features]
# for adhoc hacking
adhoc = []
# e345323a ends here
